tests/snapshots/integration_tests__examples_match_snapshots@invalid-unsupported-static-file.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/invalid-unsupported-static-file
---
index.thisfileextensionisnotsupported: "Error: Unable to load content.\n\nCaused by:\n    Content file has an unknown media type: The filename extension for the file at 'index.thisfileextensionisnotsupported' ('thisfileextensionisnotsupported') does not map to any known media type.\n"
