tests/snapshots/integration_tests__examples_match_snapshots@partials.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/partials
---
a.html.hbs: "a\n"
ab.html.hbs: "a\nb\n\n"
abc.html.hbs: "a\nb\n\nc\n\nsubdirectory entries:\nsubdirectory/c\n"
b.html: "b\n"
subdirectory.html.hbs: "subdirectory entries:\nsubdirectory/c\n"
subdirectory/c.html.hbs: "c\n"
