tests/snapshots/integration_tests__examples_match_snapshots@render-context.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/render-context
---
a.html: "a\n"
request-route-wrapper.txt.hbs: "request-route from this file: request-route-wrapper\nrequest-route from file included via partial: request-route-wrapper\nrequest-route from file included via get helper: request-route-wrapper"
request-route.txt.hbs: request-route
server-info.txt.hbs: "version: 0.0.1\n"
with-empty-context.html.hbs: "this with normal context: [object]\n\n"
