tests/snapshots/integration_tests__examples_match_snapshots@static-content.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/static-content
---
empty-file.txt: ""
index.html: "<h1>title</h1><p>content</p>\n"
no-trailing-newline.txt: there is no newline following this
