tests/snapshots/integration_tests__hello-world.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/hello-world
---
hello.txt: hello world
