tests/snapshots/integration_tests__invalid-duplicate-media-type-3.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: samples/invalid-duplicate-media-type-3
---
bad.xml.hbs: "Unable to load content.\n\nCaused by:\n    There are multiple content files for route /bad with the same media type (text/xml).\n"
bad.xml.php: "Unable to load content.\n\nCaused by:\n    There are multiple content files for route /bad with the same media type (text/xml).\n"
